arreglos fuentes, colores y logo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- Google fonts - Montserrat for headings, Cardo for copy-->
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <!-- onepage scroll stylesheet-->
     <link rel="stylesheet" href="css/onepage-scroll.css">
     <!-- theme stylesheet-->
@@ -50,13 +51,13 @@
               <div class="row">
                 <div class="  col-md-6 col-sm-12">
 
-                  <p style="font-size:42px;">Con <strong>Flugel storm</strong>, nunca pierdas de vista tu planta de asesores.</p>
+                  <p style="font-size:42px;">Con <strong>Flugel storm</strong>, controla la calidad en atención al cliente de forma eficiente.</p>
 
                 </div>
               </div>
             </div>
           </div>
-          <div class="icon faa-float animated"><i class="fa fa-angle-double-down"></i></div>
+
         </section>
         <!--Dimensionamiento section-->
         <section id="page2">
@@ -68,13 +69,14 @@
                   <p><img src="img/chart-store.png" alt="tienda no dimensionada" class="img-responsive"></p>
                 </div>
                 <div class="col-md-5 col-md-offset-1">
-                  <p style="margin-top:80px;">Dimensione sus asesores de forma precisa.</p>
+                  <p class="head">Dimensione sus <strong id="asesores"> asesores </strong> de forma precisa.</p>
+                  <p>Mantenga un ambiente agradable en su planta, evitando la aglomeración descontrolada de sus clientes.</p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-offset-1 col-md-5">
 
-                  <p style="">Visualice en tiempo real los indicadores necesarios que haran de su atensión al cliente la mejor experiencia.  </p>
+                  <p class="head">Visualice en tiempo real los <strong id="asesores"> indicadores </strong> necesarios que haran de su atensión al cliente la mejor experiencia.  </p>
 
                 </div>
                 <div class="col-md-5 col-md-offset-1">
@@ -97,21 +99,21 @@
                       <p><img src="img/nodos.png" alt="nodos de planta" class="resize"></p>
                     </div>
                     <div class="col-sm-6">
-                      <p style="margin-top:100px;">Con la ayuda de Flugel conecte y gestione sus plantas de asesores en un mismo sistema.</p>
+                      <p style="margin-top:100px;">Con la ayuda de Flugel conecte y gestione sus plantas de asesores en un mismo sistema de forma simple y flexible.</p>
 
                     </div>
                   </div>
                   <div class="row copyright">
                     <div class="col-md-6">
-                      <p  style="font-size:15px;">&copy;2015 Your Flugel-storm</p>
+                      <p  style="font-size:15px;">&copy;2015 Flugel-storm</p>
                     </div>
-               
+
                 </div>
               </div>
             </div>
           </div>
         </section>
-        
+
       </div>
     </div>
     <!-- Javascript files-->
