--- a/index.html
+++ b/index.html
@@ -66,21 +66,21 @@
               <div class="row">
                 <div class="col-md-6">
 
-                  <p><img src="img/chart-store.png" alt="tienda no dimensionada" class="img-responsive"></p>
+                  <p><object type="image/svg+xml" data="img/store0.1.svg"></object></p>
                 </div>
                 <div class="col-md-5 col-md-offset-1">
-                  <p class="head">Dimensione sus <strong id="asesores"> asesores </strong> de forma precisa.</p>
+                  <p class="head">Dimensione sus <strong > asesores </strong> de forma precisa.</p>
                   <p>Mantenga un ambiente agradable en su planta, evitando la aglomeración descontrolada de sus clientes.</p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-offset-1 col-md-5">
 
-                  <p class="head">Visualice en tiempo real los <strong id="asesores"> indicadores </strong> necesarios que haran de su atensión al cliente la mejor experiencia.  </p>
+                  <p class="head">Visualice en tiempo real los <strong > indicadores </strong> necesarios que haran de su atensión al cliente la mejor experiencia.  </p>
 
                 </div>
                 <div class="col-md-5 col-md-offset-1">
-                  <p><img src="img/chart.png" alt="graficos visuales" class="img-responsive"></p>
+                  <p><object type="image/svg+xml" data="img/chart.svg"></object></p>
                 </div>
               </div>
             </div>
@@ -96,16 +96,16 @@
                   <h2 class="heading hidden">nodos</h2>
                   <div class="row">
                     <div class="col-sm-6">
-                      <p><img src="img/nodos.png" alt="nodos de planta" class="resize"></p>
+                      <p class="top"><object type="image/svg+xml" data="img/nodos.svg"></object></p>
                     </div>
                     <div class="col-sm-6">
-                      <p style="margin-top:100px;">Con la ayuda de Flugel conecte y gestione sus plantas de asesores en un mismo sistema de forma simple y flexible.</p>
+                      <p style="margin-top:300px;">Con la ayuda de Flugel conecte y gestione sus plantas de asesores en un mismo sistema de forma simple y flexible.</p>
 
                     </div>
                   </div>
                   <div class="row copyright">
                     <div class="col-md-6">
-                      <p  style="font-size:15px;">&copy;2015 Flugel-storm</p>
+                      <p  style="font-size:15px; margin-top:-170px;">&copy;2015 Flugel-storm</p>
                     </div>
 
                 </div>
