--- a/app/index.html
+++ b/app/index.html
@@ -7,20 +7,25 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
+    <!-- inject:css -->
+    <!-- endinject -->
+
     <!-- Bootstrap and Font Awesome css-->
 
-    <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="css/font-awesome-animation.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="styles/font-awesome.css">
+     <link rel="stylesheet" href="styles/font-awesome-animation.min.css">
+     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <!-- Google fonts - Montserrat for headings, Cardo for copy-->
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
     <!-- onepage scroll stylesheet-->
-    <link rel="stylesheet" href="css/onepage-scroll.css">
+    <!-- <link href="bower_components/onepage-scroll/onepage-scroll.css"></link> -->
+    <link rel="stylesheet" href="styles/onepage-scroll.css">
     <!-- theme stylesheet-->
-    <link rel="stylesheet" href="css/style.default.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="styles/style.default.css" id="theme-stylesheet">
     <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="styles/custom.css">
     <!-- Favicon-->
     <link rel="shortcut icon" href="favicon.png">
     <!-- Tweaks for older IEs--><!--[if lt IE 9]>
@@ -66,7 +71,7 @@
               <div class="row">
                 <div class="col-md-6">
 
-                  <p><object type="image/svg+xml" data="img/store0.1.svg"></object></p>
+                  <p><object type="image/svg+xml" data="images/store0.1.svg"></object></p>
                 </div>
                 <div class="col-md-5 col-md-offset-1">
                   <p class="head">Dimensione sus <strong > asesores </strong> de forma precisa.</p>
@@ -80,7 +85,7 @@
 
                 </div>
                 <div class="col-md-5 col-md-offset-1">
-                  <p><object type="image/svg+xml" data="img/chart.svg"></object></p>
+                  <p><object type="image/svg+xml" data="images/chart.svg"></object></p>
                 </div>
               </div>
             </div>
@@ -96,7 +101,7 @@
                   <h2 class="heading hidden">nodos</h2>
                   <div class="row">
                     <div class="col-sm-6">
-                      <p class="top"><object type="image/svg+xml" data="img/nodos.svg"></object></p>
+                      <p class="top"><object type="image/svg+xml" data="images/nodos.svg"></object></p>
                     </div>
                     <div class="col-sm-6">
                       <p style="margin-top:300px;">Con la ayuda de Flugel conecte y gestione sus plantas de asesores en un mismo sistema de forma simple y flexible.</p>
@@ -117,20 +122,15 @@
       </div>
     </div>
     <!-- Javascript files-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/jquery-1.11.0.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.cookie.js"></script>
-    <script src="js/jquery.onepage-scroll.js"></script>
-    <script src="js/front.js"></script>
+    <!-- inject:js -->
+   <!-- endinject -->
+
+      <script src="scripts/jquery-1.11.0.min.js"></script>
+      <script src="scripts/bootstrap.min.js"></script>
+      <script src="scripts/jquery.cookie.js"></script>
+      <script src="scripts/jquery.onepage-scroll.js"></script>
+      <script src="scripts/front.js"></script>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
+
   </body>
 </html>
