added beneficios slide - mobilefirst - min 100%

--- a/app/appmin/index.html
+++ b/app/appmin/index.html
@@ -39,13 +39,13 @@
     <div class="wrapper">
       <div class="main">
         <!--Asesor section-->
-        <section id="page1" class="page1">
+        <section id="page1">
           <div class="content">
             <div class="container clearfix">
               <div class="row">
                 <div class="  col-md-6 col-sm-12">
 
-                  <p style="font-size:42px;">Con <strong>Flugel storm</strong>, controla la calidad en atención al cliente de forma eficiente.</p>
+                  <p class="firstp">Con <strong>Flugel storm</strong>, controla la calidad en atención al cliente de forma eficiente.</p>
 
                 </div>
               </div>
@@ -60,7 +60,7 @@
               <div class="row">
                 <div class="col-md-6">
 
-                  <p><object type="image/svg+xml" data="dist/svg/store0.1.svg"></object></p>
+                  <p><object class="col-xs-12" type="image/svg+xml" data="dist/svg/store0.1.svg"></object></p>
                 </div>
                 <div class="col-md-5 col-md-offset-1">
                   <p class="head">Dimensione sus <strong > asesores </strong> de forma precisa.</p>
@@ -74,9 +74,36 @@
 
                 </div>
                 <div class="col-md-5 col-md-offset-1">
-                  <p><object type="image/svg+xml" data="dist/svg/chart.svg"></object></p>
+                  <p><object class="col-xs-12" type="image/svg+xml" data="dist/svg/chart.svg"></object></p>
                 </div>
               </div>
+            </div>
+          </div>
+        </section>
+
+        <!-- Beneficios -->
+        <section id="page6" class="section-gray">
+          <div class="content">
+            <div class="container clearfix">
+              <div class="row">
+                <div class="col-md-12">
+                  <h2 class="heading">Caracteristicas</h2>
+                  <div class="row">
+                    <div class="col-sm-4 col-xs-12">
+                      <p ><object class="col-xs-12"type="image/svg+xml" data="dist/svg/bf1.svg"></object></p>
+                      <p class="text-center">Acceso multiplataforma</p>
+                    </div>
+                    <div class="col-sm-4 col-xs-12  ">
+                      <p ><object class="col-xs-12" type="image/svg+xml" data="dist/svg/bf2.svg"></object></p>
+                      <p class="text-center">Bajo costo en infraestructura</p>
+                    </div>
+                    <div class="col-sm-4 col-xs-12  ">
+                      <p ><object class="col-xs-12" type="image/svg+xml" data="dist/svg/bf3.svg"></object></p>
+                      <p class="text-center">Analisís de actividad instantanea</p>
+                    </div>
+                  </div>
+              </div>
+
             </div>
           </div>
         </section>
@@ -89,17 +116,17 @@
                 <div class="col-md-12">
                   <h2 class="heading hidden">nodos</h2>
                   <div class="row">
-                    <div class="col-sm-6">
-                      <p class="top"><object type="image/svg+xml" data="dist/svg/nodos.svg"></object></p>
+                    <div class="col-sm-6 col-xs-12">
+                      <p class="top"><object class="col-xs-12" type="image/svg+xml" data="dist/svg/nodos.svg"></object></p>
                     </div>
                     <div class="col-sm-6">
-                      <p style="margin-top:300px;">Con la ayuda de Flugel conecte y gestione sus plantas de asesores en un mismo sistema de forma simple y flexible.</p>
+                      <p class="col-xs-12 nodetext">Con la ayuda de Flugel conecte y gestione sus plantas de asesores en un mismo sistema de forma simple y flexible.</p>
 
                     </div>
                   </div>
                   <div class="row copyright">
-                    <div class="col-md-6">
-                      <p  style="font-size:15px; margin-top:-170px;">&copy;2015 Flugel-storm</p>
+                    <div class="col-md-6 clo-xs-12">
+                      <p>&copy;2015 Flugel-storm</p>
                     </div>
 
                 </div>
@@ -107,6 +134,8 @@
             </div>
           </div>
         </section>
+
+
 
       </div>
     </div>
