--- a/app/index.html
+++ b/app/index.html
@@ -1,136 +1,212 @@
 <!DOCTYPE html>
-<html class="no-js">
-  <head>
+<html lang="es">
+
+<head>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Flugel Storm </title>
-    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="all,follow">
-    <!-- inject:css -->
-    <!-- endinject -->
+    <meta name="description" content=" Optimiza y controla la calidad en atención oportuna al cliente, organizando tu flujo de clientes.">
+    <meta name="author" content="David Villanueva">
 
-    <!-- Bootstrap and Font Awesome css-->
+    <title>Fluguel - Home</title>
 
+    <!-- Bootstrap Core CSS -->
+    <link rel="stylesheet" href="styles/bootstrap.min.css" type="text/css">
 
-    <link rel="stylesheet" href="styles/font-awesome.css">
-     <link rel="stylesheet" href="styles/font-awesome-animation.min.css">
-     <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <!-- Google fonts - Montserrat for headings, Cardo for copy-->
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
-    <!-- onepage scroll stylesheet-->
-    <!-- <link href="bower_components/onepage-scroll/onepage-scroll.css"></link> -->
-    <link rel="stylesheet" href="styles/onepage-scroll.css">
-    <!-- theme stylesheet-->
-    <link rel="stylesheet" href="styles/style.default.css" id="theme-stylesheet">
-    <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="styles/custom.css">
-    <!-- Favicon-->
-    <link rel="shortcut icon" href="favicon.png">
-    <!-- Tweaks for older IEs--><!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-  </head>
-  <body>
-      <!-- Navigation
-    ==========================================-->
-    <nav id="tf-menu" class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-              <a class="navbar-brand" data-index="1" href="#1">Storm</a>
+    <!-- Custom Fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="styles/font-awesome/css/font-awesome.min.css" type="text/css">
+
+    <!-- Plugin CSS -->
+    <link rel="stylesheet" href="styles/animate.min.css" type="text/css">
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles/creative.css" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body id="page-top">
+
+    <nav id="mainNav" class=" navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a id="logo-brand" class="navbar-brand page-scroll" href="#page-top">Fluguel</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                  <li>
+                        <a class="page-scroll" href="#services">Servicios</a>
+                    </li>
+
+                    <li>
+                        <a class="page-scroll" href="#contact">Contactanos</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
         </div>
-
-       </div><!-- /.container-fluid -->
+        <!-- /.container-fluid -->
     </nav>
 
-
-
-    <div class="wrapper">
-      <div class="main">
-        <!--Asesor section-->
-        <section id="page1">
-          <div class="content">
-            <div class="container clearfix">
-              <div class="row">
-                <div class="  col-md-6 col-sm-12">
-
-                  <p style="font-size:42px;">Con <strong>Flugel storm</strong>, controla la calidad en atención al cliente de forma eficiente.</p>
-
-                </div>
-              </div>
+    <header>
+        <div class="header-content">
+            <div class="header-content-inner col-md-4 col-offset-8">
+                <h2 class="section-heading">Controla y optimiza la calidad en atención oportuna al cliente.</h2>
             </div>
-          </div>
+        </div>
+    </header>
 
-        </section>
-        <!--Dimensionamiento section-->
-        <section id="page2">
-          <div class="content">
-            <div class="container clearfix">
-              <div class="row">
-                <div class="col-md-6">
 
-                  <p><object type="image/svg+xml" data="images/store0.1.svg"></object></p>
+    <section id="services">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Fluguel lo hace fácil</h2>
+                    <hr class="primary">
                 </div>
-                <div class="col-md-5 col-md-offset-1">
-                  <p class="head">Dimensione sus <strong > asesores </strong> de forma precisa.</p>
-                  <p>Mantenga un ambiente agradable en su planta, evitando la aglomeración descontrolada de sus clientes.</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-offset-1 col-md-5">
-
-                  <p class="head">Visualice en tiempo real los <strong > indicadores </strong> necesarios que haran de su atensión al cliente la mejor experiencia.  </p>
-
-                </div>
-                <div class="col-md-5 col-md-offset-1">
-                  <p><object type="image/svg+xml" data="images/chart.svg"></object></p>
-                </div>
-              </div>
             </div>
-          </div>
-        </section>
-
-        <!-- Nodos section-->
-        <section id="page5" class="section-gray">
-          <div class="content">
-            <div class="container clearfix">
-              <div class="row">
-                <div class="col-md-12">
-                  <h2 class="heading hidden">nodos</h2>
-                  <div class="row">
-                    <div class="col-sm-6">
-                      <p class="top"><object type="image/svg+xml" data="images/nodos.svg"></object></p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-3 text-center ">
+                    <div class="service-box">
+                        <img class=" service-circle  wow bounceIn text-primary" alt=" información instantánea" src="images/bf3.svg">
+                        <h3>Información instantánea</h3>
+                        <p class="text-muted">Visualiza en tiempo real los indicadores que harán de la atención al cliente su mejor experiencia.</p>
                     </div>
-                    <div class="col-sm-6">
-                      <p style="margin-top:300px;">Con la ayuda de Flugel conecte y gestione sus plantas de asesores en un mismo sistema de forma simple y flexible.</p>
-
-                    </div>
-                  </div>
-                  <div class="row copyright">
-                    <div class="col-md-6">
-                      <p  style="font-size:15px; margin-top:-170px;">&copy;2015 Flugel-storm</p>
-                    </div>
-
                 </div>
-              </div>
-            </div>
-          </div>
-        </section>
+                <div class="col-lg-3 col-md-3 text-center ">
+                    <div class="service-box">
+                        <img class=" service-circle  wow bounceIn text-primary" alt="multiplataforma" src="images/bf1.svg">
+                        <h3>Multiplataforma</h3>
+                        <p class="text-muted">Desde donde estés accede a indicadores, información de asesores y clientes, con cualquier dispositivo.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 text-center ">
+                    <div class="service-box">
+                        <img style="height:134px important!;" class=" service-circle  wow bounceIn text-primary" alt="integración" src="images/bf4.png">
+                        <h3>Integración con tus servicios </h3>
+                        <p class="text-muted">Con una poderosa interfaz, integra fluguel con tus servicios y plataformas.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-3 text-center ">
+                    <div class="service-box">
+                        <img class=" service-circle  wow bounceIn text-primary" alt="Escalable" src="images/bf2.svg">
+                        <h3>Escalable</h3>
+                        <p class="text-muted">Rápida implementación completamente basada en la nube.</p>
+                    </div>
+                </div>
 
+            </div>
+        </div>
+    </section>
+
+    <aside class="bg-dark">
+        <div class="container text-center">
+            <div class="call-to-action">
+                <h2>Ahorra tiempo, mejora la gestión y concéntrate en lo que realmente importa!</h2>
+                <a data-toggle="modal" data-target=".modal" class="btn btn-default btn-xl wow tada">Empecemos</a>
+            </div>
+        </div>
+    </aside>
+
+
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Mantennos en contacto</h2>
+                    <hr class="primary">
+                    <p>¿Estas listo para solicitar nuestros servicios? llámanos o escríbenos y te responderemos cuanto antes!</p>
+                </div>
+                <div class="col-lg-4 col-lg-offset-2 text-center">
+                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
+                    <p>301 2998291 -  300 4887272</p>
+                </div>
+                <div class="col-lg-4 text-center">
+                    <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <p><a href="mailto:hola@fluguel.com">hola@fluguel.com</a></p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-offset-md-8">
+                    <span class="copyright">Copyright &copy; Fluguel 2015</span>
+                </div>
+            
+
+            </div>
+        </div>
+    </footer>
+
+
+
+  <div class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Hola!! de parte del Fluguel team</h4>
       </div>
-    </div>
-    <!-- Javascript files-->
-    <!-- inject:js -->
-   <!-- endinject -->
+      <div class="modal-body">
+        <form action="//fluguel.us8.list-manage.com/subscribe/post?u=dc8d26ad62ba34c7ccd8acb6f&amp;id=3b19e9efa7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+        <label for="mce-EMAIL">Suscribete a esta gran experiencia, concentrándote solo en lo que realmente importa.  </label>
+        <input type="email" value="" name="EMAIL" class="form-control"  placeholder="Email" id="mce-EMAIL" required>
+        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;"><input type="text" name="b_dc8d26ad62ba34c7ccd8acb6f_3b19e9efa7" tabindex="-1" value=""></div>
+        <div class="clear" style="margin-top:5px;"><input type="submit" value="Subscribete" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
+        </div>
+        </form>
+      </div>
+      
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
-      <script src="scripts/jquery-1.11.0.min.js"></script>
-      <script src="scripts/bootstrap.min.js"></script>
-      <script src="scripts/jquery.cookie.js"></script>
-      <script src="scripts/jquery.onepage-scroll.js"></script>
-      <script src="scripts/front.js"></script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID.-->
 
-  </body>
+    <!--End mc_embed_signup-->
+
+    <!-- jQuery -->
+    <script src="scripts/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="scripts/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="scripts/jquery.easing.min.js"></script>
+    <script src="scripts/jquery.fittext.js"></script>
+    <script src="scripts/wow.min.js"></script>
+    <script src="scripts/mio.js"></script>
+
+       <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
+
+     <!-- Custom Theme JavaScript -->
+    <script src="scripts/creative.js"></script>
+</body>
+
 </html>
