--- a/app/index.html
+++ b/app/index.html
@@ -68,8 +68,9 @@
 
     <header>
         <div class="header-content">
-            <div class="header-content-inner col-md-4 col-offset-8">
+            <div class="header-content-inner col-md-5 col-offset-8">
                 <h2 class="section-heading">Controla y optimiza la calidad en atención oportuna al cliente.</h2>
+                  <a data-toggle="modal" data-target=".modal" class="btn btn-default btn-xl wow tada">Empieza</a>
             </div>
         </div>
     </header>
@@ -156,7 +157,7 @@
                 <div class="col-md-4 col-offset-md-8">
                     <span class="copyright">Copyright &copy; Fluguel 2015</span>
                 </div>
-            
+
 
             </div>
         </div>
@@ -182,7 +183,7 @@
         </div>
         </form>
       </div>
-      
+
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
