fix responsive and text

--- a/app/index.html
+++ b/app/index.html
@@ -68,7 +68,7 @@
 
     <header>
         <div class="header-content">
-            <div class="header-content-inner col-md-5 col-offset-8">
+            <div class="header-content-inner col-md-5 col-xs-12">
                 <h2 class="section-heading">Controla y optimiza la calidad en atención oportuna al cliente.</h2>
                   <a data-toggle="modal" data-target=".modal" class="btn btn-default btn-xl wow tada">Empieza</a>
             </div>
@@ -134,7 +134,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Mantennos en contacto</h2>
+                    <h2 class="section-heading">Contáctanos</h2>
                     <hr class="primary">
                     <p>¿Estas listo para solicitar nuestros servicios? llámanos o escríbenos y te responderemos cuanto antes!</p>
                 </div>
