--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner col-md-5 col-xs-12">
-                <h2 class="section-heading">Controla y optimiza la calidad en atención oportuna al cliente.</h2>
+                <h2 class="section-heading" style="color: #495A74;">Controla y optimiza la calidad en atención oportuna al cliente.</h2>
                   <a data-toggle="modal" data-target=".modal" class="btn btn-default btn-xl wow tada">Empieza</a>
             </div>
         </div>
@@ -80,35 +80,35 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Fluguel lo hace fácil</h2>
+                    <h2 class="section-heading" style="font-size: 33px">Fluguel lo hace fácil</h2>
                     <hr class="primary">
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-3 text-center ">
+                <div class="col-lg-3 col-md-3 col-sm-6 text-center ">
                     <div class="service-box">
                         <img class=" service-circle  wow bounceIn text-primary" alt=" información instantánea" src="images/bf3.svg">
                         <h3>Información instantánea</h3>
                         <p class="text-muted">Visualiza en tiempo real los indicadores que harán de la atención al cliente su mejor experiencia.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 text-center ">
+                <div class="col-lg-3 col-md-3 col-sm-6 text-center ">
                     <div class="service-box">
                         <img class=" service-circle  wow bounceIn text-primary" alt="multiplataforma" src="images/bf1.svg">
                         <h3>Multiplataforma</h3>
                         <p class="text-muted">Desde donde estés accede a indicadores, información de asesores y clientes, con cualquier dispositivo.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 text-center ">
+                <div class="col-lg-3 col-md-3 col-sm-6 text-center ">
                     <div class="service-box">
                         <img style="height:134px important!;" class=" service-circle  wow bounceIn text-primary" alt="integración" src="images/bf4.png">
                         <h3>Integración con tus servicios </h3>
                         <p class="text-muted">Con una poderosa interfaz, integra fluguel con tus servicios y plataformas.</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-3 text-center ">
+                <div class="col-lg-3 col-md-3 col-sm-6 text-center ">
                     <div class="service-box">
                         <img class=" service-circle  wow bounceIn text-primary" alt="Escalable" src="images/bf2.svg">
                         <h3>Escalable</h3>
