--- a/app/index.html
+++ b/app/index.html
@@ -68,9 +68,9 @@
 
     <header>
         <div class="header-content">
-            <div class="header-content-inner col-md-5 col-xs-12">
+            <div class="header-content-inner col-md-8 col-xs-12">
                 <h2 class="section-heading" style="color: #495A74;">Controla y optimiza la calidad en atención oportuna al cliente.</h2>
-                  <a data-toggle="modal" data-target=".modal" class="btn btn-default btn-xl wow tada">Empieza</a>
+                  <a data-toggle="modal" data-target=".modal" class="btn btn-default btn-xl wow tada">Empecemos</a>
             </div>
         </div>
     </header>
@@ -170,7 +170,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title">Hola!! de parte del Fluguel team</h4>
+        <h4 class="modal-title">Póngase en contacto con nosotros</h4>
       </div>
       <div class="modal-body">
         <form action="//fluguel.us8.list-manage.com/subscribe/post?u=dc8d26ad62ba34c7ccd8acb6f&amp;id=3b19e9efa7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
