--- a/app/index.html
+++ b/app/index.html
@@ -68,8 +68,11 @@
 
     <header>
         <div class="header-content">
-            <div class="header-content-inner col-md-8 col-xs-12">
+            <div class="header-content-inner col-md-7 col-xs-12">
                 <h2 class="section-heading" style="color: #495A74;">Controla y optimiza la calidad en atención oportuna al cliente.</h2>
+                <h3 style="color: #565555;font-size: 1.4em;">
+                  Organiza tu sala de espera, el flujo de clientes, observa estadísticas de
+                  indicadores claves  en tiempo real y toma decisiones a tiempo.</h3>
                   <a data-toggle="modal" data-target=".modal" class="btn btn-default btn-xl wow tada">Empecemos</a>
             </div>
         </div>
