--- a/app/index.html
+++ b/app/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-6 text-center ">
                     <div class="service-box">
-                        <img style="height:134px important!;" class=" service-circle  wow bounceIn text-primary" alt="integración" src="images/bf4.png">
+                        <img style="height:134px important!;" class=" service-circle bf4 wow bounceIn text-primary" alt="integración" src="images/bf4.svg">
                         <h3>Integración con tus servicios </h3>
                         <p class="text-muted">Con una poderosa interfaz, integra fluguel con tus servicios y plataformas.</p>
                     </div>
